# jterm

./: .env.example  .flake8  .gitignore  AI_SETUP_QUICKSTART.md  AUTO_USER_CREATION.md  CLAUDE.md  CLIPBOARD_USAGE.md  IMAGE_EDITOR_COMPLETE.md  LICENSE  README.md  alembic.ini  main.py  package.json  pyproject.toml  requirements.txt  test_image_editor.py
dist-placeholder/: index.html
docs/: MISSING_COMPONENTS.md  ai-provider-setup.md  image-editor-javascript-flow.md  imgcat-editor.md  performance-profiling.md
docs/optimizations/: T044-websocket-ping-optimization.md  T045-terminal-output-debouncing.md  T046-CRITICAL-FIX-select-timeout.md  T046-idle-polling-removal.md  T047-lazy-load-xterm-addons.md  T048-cpu-validation-results.md
migrations/: env.py
scripts/: build-python.sh  build-tauri.sh  create-baseline-documentation.sh  kill-orphan-processes.sh  monitor-cpu-simple.sh  profile-baseline.sh  test-cpu-idle.sh  verify-debouncing-optimization.sh  verify-lazy-loading-optimization.sh  verify-polling-optimization.sh  verify-websocket-optimization.sh
src/: config.py  main.py
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  remote-clipboard.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  menu.rs  mod.rs  system.rs
src-tauri/src/python/: health.rs  launcher.rs  mod.rs
src-tauri/src/utils/: db_path.rs  logging.rs  mod.rs
src-tauri/ui/: desktop.css  desktop.js  index.html
templates/: base.html  image_editor_page.html  terminal.html
tests/: test_recording_integration.py
(+197 files in other folders)
