[package]
name = "jterm"
version = "0.1.0"
description = "Desktop terminal emulator with multimedia support, AI assistance, and session recording"
authors = ["jterm contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Core Tauri dependencies
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"

# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client for backend health checks
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# System paths
dirs = "5.0"

# Utilities
log = "0.4"
chrono = "0.4"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
